humble_ws/log/build_2024-02-22_15-20-36/waypoint_logger/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/rstole01/Documents/CSE-596/humble_ws/install/waypoint_logger/lib/python3.10/site-packages/waypoint_logger/waypoint_logger.py", line 31
    def listener_callback(self, data:
                         ^
SyntaxError: '(' was never closed

